added heater.csv file

--- a/Operational_analysis/pyload_first_switchon/temperature.ipynb
+++ b/Operational_analysis/pyload_first_switchon/temperature.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
     "\n",
     "\n",
     "# binned images with nskip\n",
-    "directory = 'leop'\n",
+    "directory = '.'\n",
     "#directory='/Users/lindamegner/MATS/retrieval/FlightData/221106_payload_first_switchon/RacFiles_out'\n",
     "\n",
     "#add_rac_temp_data(directory + \"/HTR.csv\", CCDitem, labtemp=999)\n",
